<resources>
    <string name="order_summary">Order Summary</string>
    <string name="app_name">Your Order</string>
    <string name="add">+</string>
    <string name="_0">₹0</string>
    <string name="order">Order</string>
    <string name="zero">0</string>
    <string name="subtract">-</string>
    <string name="quantity">Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
</resources>
